unicard_types_macro/tests/ui/struct_generic_test.stderr
error: WasmType does not support generics
 --> tests/ui/struct_generic_test.rs:4:15
  |
4 | pub struct Foo<'a> {
  |               ^
