unicard_types_macro/tests/ui/struct_generic_test.rs
use unicard_types_macro::WasmType;

#[derive(WasmType)]
pub struct Foo<'a> {
    my_str: &'a str
}

fn main() {}